Closed
Bug 450865
Opened 17 years ago
Closed 17 years ago
c++ style comment in js/src/jsemit.c
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: ul-mcamafia, Assigned: crowderbt)
Details
(Keywords: verified1.8.1.17)
Attachments
(1 file)
1016 bytes,
patch
|
shaver
:
review+
dveditz
:
approval1.8.1.17+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; AIX 5.1; en-US; rv:1.8.1.16) Gecko/20080806 Firefox/2.0.0.16
Build Identifier: MOZILLA_1_8_BRANCH
build bustage due to c++ style comment in c source file
Reproducible: Always
Steps to Reproduce:
1. build with a C89 ANSI C compiler
Actual Results:
comilation error due to illegal C code
Expected Results:
successful compilation
Trunk requires C99 compiler, but MOZILLA_1_8_BRANCH still supports C89 ANSI compilers.
Found this with VisualAge C++ 5.0.2.9 on AIX 4.3.3 (which has no C99!)
Reporter | ||
Comment 1•17 years ago
|
||
This trivial patch makes jsemit.c compile on pre-C99 C compilers on branch MOZILLA_1_8_BRANCH
Attachment #334078 -
Flags: review?
Reporter | ||
Updated•17 years ago
|
Attachment #334078 -
Flags: review? → review?(shaver)
Reporter | ||
Updated•17 years ago
|
Version: unspecified → 1.8 Branch
Comment 2•17 years ago
|
||
Comment on attachment 334078 [details] [diff] [review]
replaces c++ with c style comment only
r=shaver, sure.
Attachment #334078 -
Flags: review?(shaver) → review+
Reporter | ||
Updated•17 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 3•17 years ago
|
||
As trivial as it is, I don't think this can land w/o branch approval. (correct me if I'm wrong, shaver)
Assignee | ||
Comment 4•17 years ago
|
||
Comment on attachment 334078 [details] [diff] [review]
replaces c++ with c style comment only
Trivial.
Attachment #334078 -
Flags: approval1.9.0.2?
Assignee | ||
Comment 5•17 years ago
|
||
Comment on attachment 334078 [details] [diff] [review]
replaces c++ with c style comment only
Woops, wrong branch.
Attachment #334078 -
Flags: approval1.9.0.2? → approval1.8.1.17?
Comment 7•17 years ago
|
||
Comment on attachment 334078 [details] [diff] [review]
replaces c++ with c style comment only
Approved for 1.8.1.17, a=dveditz for release-drivers.
Attachment #334078 -
Flags: approval1.8.1.17? → approval1.8.1.17+
Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 9•17 years ago
|
||
Sorry, didn't think the keyword was necessary; as this is 1.8.1.17-only.
Comment 10•17 years ago
|
||
Sadly, we do, since the only way to track branch bugs is by keyword. Bugzilla sucks. :(
Verified FIXED using
http://mxr.mozilla.org/mozilla1.8/source/js/src/jsemit.c#608:
608 /* FALL THROUGH */
Replacing fixed1.8.1.17 with verified1.8.1.17, and marked as Verified FIXED.
Status: RESOLVED → VERIFIED
Keywords: fixed1.8.1.17 → verified1.8.1.17
Updated•17 years ago
|
Flags: in-testsuite-
Flags: in-litmus-
You need to log in
before you can comment on or make changes to this bug.
Description
•