Bug 450865: C++-style comment in js/src/jsemit.c; patch by Uli Link <ul.mcamafia@linkitup.de>, r=shaver, a=dveditz