mozilla/js/src/jsemit.c
@@ -5447,7 +5447,7 @@ js_EmitTree(JSContext *cx, JSCodeGenerator *cg, JSParseNode *pn)
                     EMIT_UINT16_IMM_OP(pn2->pn_op, atomIndex);
                 break;
             }
-            // FALL THROUGH
+            /* FALL THROUGH */
           case TOK_DOT:
             EMIT_ATOM_INDEX_OP(pn2->pn_op, atomIndex);
             break;
